--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ links:
     url: /project/
   - title: 发表论文
     url: /paper/
-  - title: 科研创新
+  - title: 授权专利
     url: /patent/
   - title: 我的团队
     url: /team/
