--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ owner:
   avatar: HSP.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
   email: eehsp@scut.edu.cn
-  # school: https://www.scut.edu.cn/
+  school: https://www.scut.edu.cn/
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   github: GuangLun2000
   # linkedin: hanlincai
