--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,11 @@ owner:
   email: eehsp@scut.edu.cn
   school: https://www.scut.edu.cn/
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  github: GuangLun2000
+  # phone:
+  located: 逸夫科学馆416
+  github: QiferG
   # linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   # facebook: caihanlin2002
   # instagram: lancecai2002
   # lastfm:
