--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ links:
     url: /paper/
   - title: 授权专利
     url: /patent/
-  - title: 我的团队
+  - title: 团队介绍
     url: /team/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
