--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ owner:
   school: https://www.scut.edu.cn/
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # phone:
-  located: 逸夫科学馆416
+  located: 电子与信息学院
   github: QiferG
   # linkedin: hanlincai
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
