--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ links:
   - title: 授权专利
     url: /patent/
   - title: 团队介绍
-    url: /project/
+    url: /team/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # timezone: China/Guangzhou
