--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ owner:
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # phone:
   located: https://www2.scut.edu.cn/ee/
-  github: QiferG
+  github: huangshaungping
   # linkedin: hanlincai
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   # facebook: caihanlin2002
